kubernetes/apps/observability/grafana/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Observability
    gethomepage.dev/name: Grafana
    gethomepage.dev/icon: grafana.png
    gethomepage.dev/description: Dashboards & Metrics
    gethomepage.dev/pod-selector: "app=grafana"
spec:
  hostnames:
    - grafana.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: grafana-service
          port: 3000
